--- a/report.tex
+++ b/report.tex
@@ -112,7 +112,7 @@ The main problem that our team is aiming to address in this project is to train 
 
 \newpage
 \noindent\section{Selection of Algorithms}
-As a group, we have selected five sub-algorithms that we believe will work best for our overall algorithm. These sub-algorithms were carefully selected, and each one was assigned to a group member. Below is a description of each algorithm, how it works, and the process of each algorithm.
+As a group, we have selected five sub-algorithms that we believe will work best for our overall algorithm. These sub-algorithms were carefully selected, and each one was assigned to a group member. Below is a description of each algorithm and how it works. 
 \subsection{Fast Gradient Sign Method}
 The Fast Gradient Sign Method is a technique used in adversarial machine learning to generate adversarial examples that can fool a machine learning model. The FGSM algorithm takes advantage of the gradient information of the loss function with respect to the input data to generate adversarial examples.\\
 
