--- a/report.tex
+++ b/report.tex
@@ -234,8 +234,9 @@ The final algorithm will run through all 5 sub-algorithms (Fast Gradient Sign, B
 \newpage
 \section{References}
 \begin{enumerate}
+    \item ewatson2. (n.d.). Ewatson2/EEL6812\textunderscore DeepFool\textunderscore Project: Class project implementing the deepfool adversarial attack. GitHub. Retrieved April 28, 2023, from https://github.com/ewatson2/EEL6812\textunderscore DeepFool\textunderscore Project 
+    
     \item Morgan, A. (2022, May 2). A review of DeepFool: A simple and accurate method to fool Deep Neural Networks. Medium. Retrieved April 28, 2023, from https://medium.com/machine-intelligence-and-deep-learning-lab/a-review-of-deepfool-a-simple-and-accurate-method-to-fool-deep-neural-networks-b016fba9e48e 
-    \item 
     
 \end{enumerate}
 
