--- a/report.tex
+++ b/report.tex
@@ -104,11 +104,13 @@ The number of successfully deceived photographs at a specific budget level will 
 To complete this project, a complete justification of the rationale for selecting each of the five machine learning algorithms will be provided. This justification will also cover how they were trained and how the optimizer allocates the votes. Finally, the justification should explain why such an approach should work. All code, notes, documentation, etc. must be tracked using Git and Github for verification of the effort contributed by each team member. 
 
 \section{Problem Being Addressed}
-The main problem that our team is aiming to address in this project is to train an algorithm that will perform adversarial attacks on a binary image classifier. In order to accomplish this, the team worked on developing five sub-algorithms to independently attempt to deceive the given classifier. Our team decided that we would independently work on completing the sub-algorithms and then shift towards developing the weighted majority classifier. We believe that by dividing the labor among the group, each team member would be able to specialize in an algorithm and provide higher quality results. Once weights have been assigned, the highest scoring algorithm would be chosen for use against the model. For a successful algorithm, it is expected that it all images in each respective folder, dandelion and grass, would be returned as the model is structured so that if it is unable to categorize the image correctly with a probability greater than fifty percent. 
+The main problem that our team is aiming to address in this project is to train an algorithm and sub-algorithms that will perform adversarial attacks on a pre-trained image classification model. The pre-trained image classification model is given to us, and must be loaded into our code. This model works by accepting an image, and then proceeds to attempt to classify the image as either X or Y.  It does this classification based on the preponderance of the evidence, that is 51\% probability of an image being an X means the machine will classify it as a X.\\
 
+These sub-algorithms must be placed within one main algorithm. This main algorithm will assign weights to the other five algorithms, along the lines of the weighted majority classifier. The final result must be able to fool the image classifier that is provided with exactly B pixels changed in the image. The main algorithm must assign weights to the different algorithms based on some expected performance given the image. Once the algorithms vote on which set of pixels will be changed, the optimizer will select which pixels to actually use from the set. The only thing that will impact the budget for this project will be the absolute number of pixels used to fool the classifier. The adversarial function input must be both image and scalar, which tells the algorithm the expected budget in terms of the ratio image size. Our model must be able to successfully
+fool the classifier with a budget of P/100, for at least one image, where P is the number of pixels in the image, and must do this in less than 10 seconds per image.
 
-\newpage
 \section{Solution to the Problem}
+In order to accomplish this, the team worked on developing five sub-algorithms to independently attempt to deceive the given classifier. These methods of these five sub-algorithms include the Basic Iterative Method, the dOur team decided that we would independently work on completing the sub-algorithms and then shift towards developing the weighted majority classifier. We believe that by dividing the labor among the group, each team member would be able to specialize in an algorithm and provide higher quality results. Once weights have been assigned, the highest scoring algorithm would be chosen for use against the model. For a successful algorithm, it is expected that it all images in each respective folder, dandelion and grass, would be returned as the model is structured so that if it is unable to categorize the image correctly with a probability greater than fifty percent. 
 
 \newpage
 \noindent\section{Selection of Algorithms}
