--- a/report.tex
+++ b/report.tex
@@ -126,8 +126,12 @@ We chose the FGSM method because it is fast, computationally efficient, and easy
 The Basic Iterative Method is a technique that is an extension of the FGSM. Instead of taking large steps, the BIM uses smaller steps and iterations to change the image, which results in higher rate of success. BIM is very straightforward and easy to manipulate using the right libraries in r, we can easily change the input values so that the algorithm run faster for perform better. \\
 
 
-\subsection{DeepFool} % WHAT you chose, WHY, EXPECTATIONS for runtime/performance tradeoffs, how to generate testing pairs for ML alg, what knowledge represenations/why, why CNN over transformer, training/eval time, knowledge representation and expected accuracy
-The DeepFool algorithm is used to misclassify an image by computing the minimal perturbations required in the most efficient manner. The authors Moosavi-Dezfooli et al. [2] performed theirt testing alongside the FGSM method in order to compare results and found that although both could misclassify the original image, FGSM required more perturbations and was thus more noticeable than DeepFool.  
+\subsection{DeepFool} 
+The DeepFool algorithm is used to misclassify an image by computing the minimal perturbations required in the most efficient manner. The authors Moosavi-Dezfooli et al. [2] performed their testing alongside the FGSM method in order to compare results and found that although both could misclassify the original image, FGSM required more perturbations and was thus more noticeable than DeepFool. We wanted to include DeepFool so that we could compare it with our own findings for FGSM. In order to do this, the DeepFool algorithm computes the minimal perturbation by finding the smallest distance to teh decision boundary of a model through many iterations. As Morgan [3] writes, "in order to obtain the minimal perturbation for the classifier of 'f' to misclassify the input image of 'x', the perturbation of r*(x) must project the input image of 'x' orthogonal to the hyperplane of the binary classifier.", it applies this approach iteratively to modify the given image until the classified output changes. This is done in small steps so that at least visually, the images look identical. \\
+
+Runtime and performance tradeoffs for DeepFool vary on the size and sophistication of the data but based off DeepFool's authors results, we can get a rough idea of what our results would have looked like. Moosavi-Dezfooli et al. [2] ran DeepFool on six different datasets for one sample, with an average time to compute one sample was 465 ms, applying this to our own data, we were given 37 images of dandelions and 48 images of grass. Each dataset could have taken roughly 17,205 ms for dandelions and 22,320 ms for grass. To contrast, FGSM is able to produce the perturbation much quicker because it only applies one iteration, however the perturbation is on average five times larger than DeepFool's, and as seen in the results section of Moosavi-Dezfooli et al. [2], the accuracy of FGSM was lower across all methods, than DeepFool's due the larger perturbation. \\
+
+To generate testing pairs for DeepFool, we would apply it to a copy of the given data to create a reference point for every sample. We would apply the DeepFool to generate a set of adversarial images that would be used to compare the performance of the model on both the original and perturbed variations. The DeepFool algorithm has no need for knowledge representations because it does not rely on them, instead it proceeds by computing the gradient of the machine learning model and then finding the least distance between the decision boundary and the original point. \\
 
 \subsection{Carlini-Wagner}
 
